--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                task
 version:             0.1.0.0
-github:              "githubuser/task"
+github:              "Rauf659/task"
 license:             BSD3
-author:              "Author name here"
+author:              "Rauf"
 maintainer:          "example@example.com"
-copyright:           "2020 Author name here"
+copyright:           "2020 Rauf"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/task#readme>
+description:         Please see the README on GitHub at <https://github.com/Rauf659/task#readme>
 
 dependencies:
 - base >= 4.7 && < 5
